# hackathon_discord_bot

./: .gitignore  .pylintrc  README.md  bot.py  pyproject.toml  test.js
.github/workflows/: pull_request.yaml
bot/: main.py  mentor.py  roles.py  scheduler.py  welcome.py
